se agrego un botón con una funcion de avansar de pagina

--- a/pagina2.html
+++ b/pagina2.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prueba 1</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Esta es la pagina principal de 3</h1>
-    <form action="pagina2.html">
+    <h1>Esta es la pagina 2</h1>
+    <form action="index.html">
+        <button type="submit">Retroceder de pagina</button>
+    </form><form action="pagina3.html">
         <button type="submit">Avansar de pagina</button>
     </form>
 </body>
