--- a/pagina3.html
+++ b/pagina3.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prueba 1</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Esta es la pagina principal de 3</h1>
+    <h1>Esta es la ultima pagina</h1>
     <form action="pagina2.html">
-        <button type="submit">Avansar de pagina</button>
+        <button type="submit">Retroceder de pagina</button>
     </form>
 </body>
 </html>
