se agrego una imagen a la primera pagina

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <form action="pagina2.html">
         <button type="submit">Avansar de pagina</button>
     </form>
+    <img src="imagenes/Futbol1.png" width="30%">
 </body>
 </html>
