se agrego una imagen a la pagina 2

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Esta es la pagina principal de 3</h1>
     <form action="pagina2.html">
-        <button type="submit">Avansar de pagina</button>
+        <button type="submit">Avanzar de pagina</button>
     </form>
     <img src="imagenes/Futbol1.png" width="30%">
 </body>
