--- a/pagina2.html
+++ b/pagina2.html
@@ -10,7 +10,8 @@
     <form action="index.html">
         <button type="submit">Retroceder de pagina</button>
     </form><form action="pagina3.html">
-        <button type="submit">Avansar de pagina</button>
+        <button type="submit">Avanzar de pagina</button>
     </form>
+    <img src="imagenes/Futbol 2.jpg" width="30%">
 </body>
 </html>
