se agrego una imagen en la pagina 3

--- a/pagina3.html
+++ b/pagina3.html
@@ -10,5 +10,6 @@
     <form action="pagina2.html">
         <button type="submit">Retroceder de pagina</button>
     </form>
+    <img src="imagenes/Futbol 3.jpg" width="30%">
 </body>
 </html>
