Se cambio la pag principal

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Prueba 1</title>
 </head>
 <body>
-    <h1>Esta es la pagina principal de 3</h1>
+    <h1>Ya no es la principal</h1>
     <form action="pagina2.html">
         <button type="submit">Avanzar de pagina</button>
     </form>
