--- a/index.html
+++ b/index.html
@@ -4,12 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prueba 1</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Ya no es la principal</h1>
-    <form action="pagina2.html">
-        <button type="submit">Avanzar de pagina</button>
-    </form>
+<h1>Pagina principal</h1>
+    <div class="abuelo">
+        <div class="mama">
+            <form action="pagina2.html">
+                <button type="submit">Avanzar de pagina</button>
+            </form>
+        </div>
+        <br />
+        <div class="papa">
+            <form action="pagina3.html">
+                <button type="submit">Ir a la ultima pagina</button>
+            </form>
+        </div>
+    </div>    
+    <br />
     <img src="imagenes/Futbol1.png" width="30%">
 </body>
 </html>
