--- a/pagina3.html
+++ b/pagina3.html
@@ -4,12 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Esta es la ultima pagina</h1>
-    <form action="pagina2.html">
-        <button type="submit">Retroceder de pagina</button>
-    </form>
+    <h1>Esta es la pagina 3</h1>
+    <div class="abuelo">
+        <div class="mama">
+            <form action="index.html">
+                <button type="submit">Volver a la pagina principal</button>
+            </form>
+        </div>
+        <br />
+        <div class="papa">
+            <form action="pagina2.html">
+                <button type="submit">Volver de pagina</button>
+            </form>
+        </div>
+    </div>    
+    <br />
     <img src="imagenes/Futbol 3.jpg" width="30%">
 </body>
 </html>
