--- a/pagina2.html
+++ b/pagina2.html
@@ -4,14 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Esta es la pagina 2</h1>
-    <form action="index.html">
-        <button type="submit">Retroceder de pagina</button>
-    </form><form action="pagina3.html">
-        <button type="submit">Avanzar de pagina</button>
-    </form>
+    <div class="abuelo">
+        <div class="mama">
+            <form action="pagina3.html">
+                <button type="submit">Avanzar de pagina</button>
+            </form>
+        </div>
+        <br />
+        <div class="papa">
+            <form action="index.html">
+                <button type="submit">Volver de pagina</button>
+            </form>
+        </div>
+    </div>    
+    <br />
     <img src="imagenes/Futbol 2.jpg" width="30%">
 </body>
 </html>
